@@ -212,6 +212,8 @@ namespace Mono.TextEditor
 		void SetColumn ()
 		{
 			LineSegment curLine = this.document.GetLine (this.Line);
+			if (curLine == null)
+				return;
 			this.location.Column = curLine.GetLogicalColumn (editor, this.DesiredColumn);
 			if (curLine.GetVisualColumn (editor, this.location.Column) < this.DesiredColumn) {
 				this.location.Column = editor.GetNextVirtualColumn (Line, this.location.Column);
