@@ -1,5 +1,10 @@
 2010-07-01  Mike Krüger  <mkrueger@novell.com>
 
+	* Mono.TextEditor/Caret.cs:
+	* Mono.TextEditor/TextEditor.cs: Fixed some issues.
+
+2010-07-01  Mike Krüger  <mkrueger@novell.com>
+
 	* Mono.TextEditor/TextLinkEditMode.cs: Fixed text link
 	  markers.
 
